<resources>
    <string name="app_name">DayTracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="main_app_title">DayTracker</string>
    <string name="main_header_identity">Created by nov0436.</string>

    <string name="calendar_title">Calendar</string>
    <string name="calendar_subtitle">Take a look at what you were up to on a given day!</string>

    <!-- Side bar Menu items -->
    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_visual_overview">Visual Overview</string>
    <string name="menu_settings">Settings</string>

    <string name="graph_title">Overview of the last month</string>

    <!-- Side bar Menu items -->
    <string name="welcome">Welcome !</string>
    <string name="welcome_back">Welcome back</string>
    <string name="main_customize_subtitle">Customize your experience in settings.</string>


    <string name="main_menu_add_activity">Add new activity</string>

    <string name="main_menu_show_overview">Calendar</string>

    <!-- Activity categories -->
    <string name="main_cat_movement">Sport activities</string>

    <string name="cat_sport">Sport</string>
    <string name="cat_exercise">Exercising</string>
    <string name="cat_travel">Travelling</string>

    <string name="main_cat_education">Educational activities</string>

    <string name="cat_education">Self-Education</string>
    <string name="cat_study">Studying</string>
    <string name="cat_programming">Programming</string>
    <string name="cat_writing">Writing</string>
    <string name="cat_reading">Reading</string>
    <string name="cat_culture">Culture</string>

    <string name="main_cat_fun">Fun activities</string>

    <string name="cat_fun">Fun</string>
    <string name="cat_relaxing">Relax</string>
    <string name="cat_event">Events / concerts</string>
    <string name="cat_gaming">Gaming</string>

    <string name="main_cat_spiritual">Spiritual activities</string>

    <string name="cat_spiritual">Prayer, worship...</string>

    <string name="main_cat_other">Other activities</string>

    <string name="cat_relationship">Relationships</string>
    <string name="cat_working">Work</string>
    <string name="cat_miscellaneous">Miscellaneous</string>
    <string name="cat_nature">Nature</string>

    <string-array name="category_array">
        <item>Sport</item>
        <item>Exercising</item>
        <item>Travelling</item>

        <item>Self-education</item>
        <item>Studying</item>
        <item>Programming</item>
        <item>Writing</item>
        <item>Reading</item>

        <item>Culture</item>
        <item>Events / concerts</item>

        <item>Fun</item>
        <item>Nature</item>
        <item>Relax</item>
        <item>Gaming</item>

        <item>Prayer, worship...</item>

        <item>Relationships</item>

        <item>Work</item>

        <item>Miscellaneous</item>
    </string-array>

    <!-- Record types -->
    <string name="record_note">Write a note</string>
    <string name="record_voice">Record voice</string>
    <string name="record_photo">Take a photo</string>
    <string name="record_video">Record a video</string>

    <!-- Form -->
    <string name="form_title">Title:</string>
    <string name="form_note">Your note:</string>
    <string name="form_category">Category:</string>


    <!-- Form note hints -->
    <string name="form_hint_title">Title of your note...</string>
    <string name="form_hint_text">Write your note...</string>

    <string name="form_button_category">Select category</string>
    <string name="form_save">Save</string>

    <string name="form_date_time">Pick your date and time:</string>
    <string name="form_selected_category">...</string>
    <string name="form_save_location">Save location</string>

    <!-- Form photo hints -->
    <string name="form_photo_hint_title">Title of your photo...</string>
    <string name="form_photo_hint_text">Write your commentary...</string>

    <!-- Form video hints -->
    <string name="form_video_hint_title">Title of your video...</string>
    <string name="form_video_hint_text">Write your commentary...</string>

    <!-- Form voice hints -->
    <string name="form_voice_hint_title">Title of your recording...</string>
    <string name="form_voice_hint_text">Write your commentary...</string>

    <string name="title_activity_day_list">DayListActivity</string>


    <string name="toast_no_longer_available">Sorry, this record is no longer available. Maybe you accidentally deleted its source.</string>

    <string name="toast_note_saved">The note has been successfully saved.</string>
    <string name="toast_note_deleted">The note has been successfully deleted.</string>

    <string name="toast_record_saved">The record has been successfully saved.</string>
    <string name="toast_record_deleted">The record has been successfully deleted.</string>

    <string name="toast_photo_saved">The photo has been successfully saved.</string>
    <string name="toast_photo_deleted">The photo has been successfully deleted.</string>

    <string name="toast_video_saved">The video has been successfully saved.</string>
    <string name="toast_video_deleted">The video has been successfully deleted.</string>


    <string name="toast_note_not_saved">The note could not be saved.</string>
    <string name="toast_photo_not_saved">The photo could not be saved.</string>
    <string name="toast_record_not_saved">The record could not be saved.</string>
    <string name="toast_video_not_saved">The video could not be saved.</string>


    <string name="form_could_not_delete_recording">The recording could not be deleted.</string>
    <string name="form_could_not_delete_note">The note could not be deleted.</string>
    <string name="form_could_not_delete_photo">The photo could not be deleted.</string>
    <string name="form_could_not_delete_video">The video could not be deleted.</string>

    <string name="form_could_not_play_recording">The recording cannot be played.</string>


    <string name="popup_question">Do you want to delete this item?</string>
    <string name="popup_title">Confirm</string>
    <string name="popup_yes">Yes</string>
    <string name="popup_no">No</string>

    <string name="no_records">There are no records for this day.</string>

    <string name="graph_x">Categories</string>
    <string name="graph_y">Number of records</string>

    <string name="location">Location:</string>


    <string name="location_not_specified">not specified</string>

    <string name="enable_gps">Please enable GPS to use this function.</string>
    <string name="unable_to_use_gps">Unable to get your GPS location.</string>

    <string name="form_not_valid">The form is not valid, this record cannot be saved.</string>


    <string name="settings_name">How should I call you?</string>
    <string name="settings_subtitle">Customize your experience</string>
    <string name="settings_phrase">Your favourite motivational phrase...</string>
    <string name="settings_save">Save</string>
    <string name="settings_name_label">Your name:</string>
    <string name="settings_phrase_label">Your favourite phrase:</string>


</resources>
